k8s/base/billing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing
spec:
  selector:
    app: billing
  ports:
    - port: 8004
      targetPort: 8004
