k8s/base/billing/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: billing
spec:
  podSelector:
    matchLabels:
      app: billing
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
      ports:
        - port: 8004
  egress:
    - ports:
        - port: 5432
        - port: 6379
        - port: 9000
        - port: 8003  # timelog
        - port: 53
      protocol: UDP
    - ports:
        - port: 53
      protocol: UDP
